--- a/src/main/resources/templates/fragments/puesto/puestoshow.html
+++ b/src/main/resources/templates/fragments/puesto/puestoshow.html
@@ -132,7 +132,7 @@
                            <div class="form-group">
                     <label class="col-sm-5 control-label">Estado del puesto:</label>
                    <div class="col-sm-7">
-                                <p class="form-control-static">  <span th:if="${puesto.estadopuesto} == 1"  th:text="Activo"  ></span> <span th:if="${puesto.estadopuesto} == 2"  th:text="Plaza Ocupada"></span> <span th:if="${puesto.estadopuesto} == 3"  th:text="de Baja"></span>  </p>
+                                <p class="form-control-static">  <span th:if="${puesto.estadopuesto} == 1"  th:text="Activo"  ></span> <span th:if="${puesto.estadopuesto} == 2"  th:text="Plaza+' '+Ocupada"></span> <span th:if="${puesto.estadopuesto} == 3"  th:text="de Baja"></span>  </p>
                             </div>
                 </div>
                           
