--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_abogados.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_abogados.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="10" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="47"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -16,7 +16,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select e.codigoempleado, concat(e.nombreempleado," ",e.apellidoempleado)as Empleado,DATE_FORMAT(e.fechaingresoministerio, '%d/%m/%Y') AS Fecha, fa.centroeducativo, e.duiempleado from empleado e inner join empleadoformacion f on e.codigoempleado=f.codigoempleado inner join formacionacademica fa on fa.codigoformacionacademica=f.codigoformacionacademica inner join puesto p on e.codigopuesto=p.codigopuesto where p.nombrepuesto like '%abogado' or p.nombrepuesto like '%Abogado' and e.estadoempleado!=0 and e.estadoempleado!=2 and e.estadoempleado!=3 and fa.estadoformacion != 0 and estadopuesto != 0 and e.fechaingresoministerio >= STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')
+		<![CDATA[select e.codigoempleado, concat(e.nombreempleado," ",e.apellidoempleado)as Empleado,DATE_FORMAT(e.fechaingresoministerio, '%d/%m/%Y') AS Fecha, fa.centroeducativo, e.duiempleado from empleado e inner join empleadoformacion f on e.codigoempleado=f.codigoempleado inner join formacionacademica fa on fa.codigoformacionacademica=f.codigoformacionacademica inner join puesto p on e.codigopuesto=p.codigopuesto where p.nombrepuesto like '%abogado' or p.nombrepuesto like '%Abogado' and e.estadoempleado=1  and e.estadoempleado=3 and fa.estadoformacion = 1 and estadopuesto != 0 and e.fechaingresoministerio >= STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')
 and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	</queryString>
 	<field name="codigoempleado" class="java.lang.Integer">
@@ -211,8 +211,8 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<text><![CDATA[Universidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="538" y="0" width="69" height="14" uuid="c4f3a5f7-1139-48bf-8b82-e4c0ce2d041a"/>
-				<textElement verticalAlignment="Middle">
+				<reportElement x="538" y="0" width="66" height="14" uuid="c4f3a5f7-1139-48bf-8b82-e4c0ce2d041a"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[DUI]]></text>
@@ -237,7 +237,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="540" y="0" width="64" height="14" uuid="b9024f6a-3663-4f30-bd90-54799ad34e74"/>
-				<textElement>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{duiempleado}]]></textFieldExpression>
